--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,23 @@
 
 
 
-h1  {color : grey;}
+h1  {color : grey;
+	text-decoration:overline;
+	text-transform: uppercase;
+}
 
 p{color : blue;
+	text-indent: 75px;
+	line-height: 35px;
+	letter-spacing: 5px;
+	word-spacing: 1px;
+
 } 
 #first_id {color : #af4f43;
 		   background-color: silver;}
 
-.first_class {color : teal;text-align: right;}
+.first_class {color : teal;text-align: right;
+}
 
 pre {color : fuchsia;}
 
