--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ p{color : blue;
 	line-height: 35px;
 	letter-spacing: 5px;
 	word-spacing: 1px;
+	font-family: "Courier 10 Pitch", Monospace, Monospace;
+	font-size: 17px;
 
 } 
 #first_id {color : #af4f43;
