--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ p{color : blue;
 	word-spacing: 1px;
 	font-family: "Courier 10 Pitch", Monospace, Monospace;
 	font-size: 17px;
+	
+	font-variant: small-caps
 
 } 
 #first_id {color : #af4f43;
