--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,12 @@ div {background: url('dnatur.jpg') no-repeat;
 body {
 	background: url('natur.jpg') repeat scroll;
 }
+
+ol {
+	list-style-type: lower-greek;
+}
+
+ul {
+	list-style-image: url('package-reinstall.svg');
+}
+
